2004-12-01 02:12 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: [GormClassManager parseHeader:] altered
	method to throw NSInvalidArgumentException instead of a custom
	exception.  
	
2004-11-29 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPalettesManager.[hm]: [GormPalettesManager loadPalette:] now
	returns BOOL. 
	* GormPalettesManager.m: [GormPalettesManager openPalette:] returns
	nil of loadPalette returns NO.
	* GormObjCHeaderParser/OCHeaderParser.m: Returns NO if there is no
	class in the file.

2004-11-27 13:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCClass.m
	* GormObjCHeaderParser/OCIVar.m 
	* GormObjCHeaderParser/OCMethod.m: Added code to parse method
	to trim the result of any whitespace to make certain that there
	aren't any extra spaces in the data which could cause problems.
	
2004-11-27 09:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCClass.m: Condensed parse methods into
	parse.  Corrected a minor issue.
	
2004-11-27 05:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjCHeaderParser/OCClass.h
	* GormObjCHeaderParser/OCClass.m
	* GormObjCHeaderParser/NSScanner+OCHeaderParser.h
	* GormObjCHeaderParser/NSScanner+OCHeaderParser.m
	* GormObjCHeaderParser/OCMethod.h
	* GormObjCHeaderParser/OCMethod.m
	* GormObjCHeaderParser/OCIVar.h
	* GormObjCHeaderParser/OCIVar.m
	* GormObjCHeaderParser/OCHeaderParser.h
	* GormObjCHeaderParser/OCHeaderParser.m
	* GormObjCHeaderParser/GNUmakefile: New files for class parser.
	* GormClassManager.m: Changes to use new class parser.

2004-11-24 00:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSOutlineView.h: Removed savedColor and
	added "Gorm" methods to the header.
	* Palettes/3Containers/GormNSOutlineView.m: Removed all references
	to savedColor and commented out select and unselect methods.
	* Palettes/3Containers/GormNSTableView.h: Removed saved color and