@@ -1,0 +1,43 @@
+/* OCHeaderParser.h
+ *
+ * Copyright (C) 1999 Free Software Foundation, Inc.
+ *
+ * Author:	Gregory John Casamento <greg_casamento@yahoo.com>
+ * Date:	1999, 2002
+ *
+ * This file is part of GNUstep.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#include <Foundation/NSObject.h>
+
+#ifndef INCLUDED_OCIVarDecl_h
+#define INCLUDED_OCIVarDecl_h
+
+@class NSMutableArray, NSString;
+
+@interface OCIVarDecl : NSObject
+{
+  NSString *ivarString;
+  NSMutableArray *ivars;
+}
+
+- (id) initWithString: (NSString *)string;
+- (NSArray *) ivars;
+- (void) parse;
+@end
+
+#endif
